[package]
name = "nostracker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = {version = "1", features = ["preserve_order"]}
anyhow = "1"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0", features = ["blocking"] }
minijinja = { version = "2", features = ["loader"] }
include_dir = "0"
